# cloudflare-subtools-tool

./: .gitignore  README.md  cf-tools.md
cfst-gui/: Cargo.toml  package.json
cfst-gui/src/: app.js  index.html  styles.css
cfst-gui/src-tauri/: Cargo.toml  tauri.conf.json
cfst-gui/src-tauri/capabilities/: default.json
cfst-gui/src-tauri/src/: api_client.rs  cfst.rs  config_store.rs  crypto_vault.rs  lib.rs  main.rs  models.rs
output/: result.csv
