[package]
name = "cfst-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync"] }
csv = "1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
rfd = "0.15"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "cfst_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

